Renamed classes, methods etc from Trip... to Project...
- Trip didn't really cover the concept correctly, Project is a better name
- The screens show
  1 - a list of Projects (ProjectListFragment)
  2 - a list of Places (SummitListFragment
  3 - a Place (CheckinFragment)

Note: The names of 2 and 3 will be renamed to when I refactor those

--- a/android/app/src/main/res/layout/projectitem.xml
+++ b/android/app/src/main/res/layout/projectitem.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical|end"
         android:textAppearance="?attr/textAppearanceListItem"
-        tools:text="Trip Title" />
+        tools:text="Project Title" />
 
     <TextView
         android:id="@+id/group"
@@ -24,7 +24,7 @@
         android:layout_marginTop="@dimen/margin_micro"
         android:gravity="center_vertical|end"
         android:textAppearance="?attr/textAppearanceListItemSmall"
-        tools:text="Trip group" />
+        tools:text="Group name" />
 
     <TextView
         android:id="@+id/distance"
@@ -43,6 +43,5 @@
         android:gravity="center_vertical|end"
         android:textAppearance="?attr/textAppearanceListItemSmall"
         tools:text="2/10 visits" />
-
 
 </LinearLayout>
