Upgrade compile SDK and support libs to 24 and refactor projectitem layout
 - added com.android.support:percent library
 - bumped to 24.1.1 for all support libraries
 - bumped compileSdkVersion to 24 but kept targetSdkVersion to 22 so
   we don't enable runtime permissions yet
 - use PercentFrameLayout and PercentRelativeLayout in projecitem layout
 - make projectitem layout follow a 3:1 aspect ratio
 - added image and background to projectitem
 - make height of thumbnail image square and 70% height of parent height
 - added text styles for all textviews in projectitem

--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -19,4 +19,6 @@
     <dimen name="textsize_medium">18sp</dimen>
     <dimen name="textsize_large">22sp</dimen>
 
+    <fraction name="aspectRatioProjectAdapter">300.000%</fraction>
+
 </resources>
