--- a/android/app/src/main/res/layout/projectitem.xml
+++ b/android/app/src/main/res/layout/projectitem.xml
@@ -1,47 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.percent.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_small"
-    android:layout_marginEnd="@dimen/margin_small"
-    android:layout_marginStart="@dimen/margin_small"
-    android:layout_marginTop="@dimen/margin_small"
-    android:orientation="vertical">
+    android:background="@color/white">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical|end"
-        android:textAppearance="?attr/textAppearanceListItem"
-        tools:text="Project Title" />
+    <android.support.percent.PercentRelativeLayout
+        app:layout_aspectRatio="@fraction/aspectRatioProjectAdapter"
+        app:layout_widthPercent="100%"
+        tools:background="@color/dntLightGray">
 
-    <TextView
-        android:id="@+id/group"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_micro"
-        android:gravity="center_vertical|end"
-        android:textAppearance="?attr/textAppearanceListItemSmall"
-        tools:text="Group name" />
+        <ImageView
+            android:id="@+id/background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.4"
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription" />
 
-    <TextView
-        android:id="@+id/distance"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_micro"
-        android:gravity="center_vertical|end"
-        android:textAppearance="?attr/textAppearanceListItemSmall"
-        tools:text="10 km" />
+        <ImageView
+            android:id="@+id/image"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="@dimen/margin_small"
+            android:layout_marginLeft="@dimen/margin_small"
+            android:layout_marginStart="@dimen/margin_small"
+            android:contentDescription=""
+            app:layout_aspectRatio="100%"
+            app:layout_heightPercent="70%"
+            tools:background="@color/dntRed"
+            tools:ignore="ContentDescription" />
 
-    <TextView
-        android:id="@+id/visits"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_micro"
-        android:gravity="center_vertical|end"
-        android:textAppearance="?attr/textAppearanceListItemSmall"
-        tools:text="2/10 visits" />
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/image"
+            android:layout_marginEnd="@dimen/margin_small"
+            android:layout_marginStart="@dimen/margin_small"
+            android:layout_toEndOf="@id/image"
+            android:layout_toRightOf="@id/image"
+            android:ellipsize="end"
+            android:gravity="top|start"
+            android:maxLines="2"
+            android:textAppearance="@style/ProjectLargeTitle"
+            android:textSize="24sp"
+            tools:text="Syv søstre og tre brødre" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/group"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/image"
+            android:layout_marginEnd="@dimen/margin_small"
+            android:layout_marginStart="@dimen/margin_small"
+            android:layout_toEndOf="@id/image"
+            android:layout_toRightOf="@id/image"
+            android:ellipsize="end"
+            android:gravity="bottom|start"
+            android:maxLines="1"
+            android:textAppearance="@style/ProjectMediumTitle"
+            tools:text="Bergen Toppturlag" />
+
+        <TextView
+            android:id="@+id/distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="@dimen/margin_small"
+            android:layout_marginRight="@dimen/margin_small"
+            android:layout_marginStart="@dimen/margin_small"
+            android:layout_marginTop="@dimen/margin_small"
+            android:gravity="end"
+            android:textAppearance="@style/ProjectSmallTitle"
+            tools:ignore="RelativeOverlap"
+            tools:text="242.6 km" />
+
+        <TextView
+            android:id="@+id/visits"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="@dimen/margin_small"
+            android:layout_marginRight="@dimen/margin_small"
+            android:layout_marginStart="@dimen/margin_small"
+            android:layout_marginTop="@dimen/margin_small"
+            android:layout_toEndOf="@id/image"
+            android:layout_toRightOf="@id/image"
+            android:gravity="start"
+            android:textAppearance="@style/ProjectSmallTitle"
+            tools:text="Besøkt 2 av 10" />
+
+    </android.support.percent.PercentRelativeLayout>
+</android.support.percent.PercentFrameLayout>
