Use toolbar.xml in all fragments and pass it to setSupportActionBar(..)

--- a/android/app/src/main/res/layout/fragment_checkin.xml
+++ b/android/app/src/main/res/layout/fragment_checkin.xml
@@ -4,11 +4,14 @@
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true">
 
-    <!-- TODO: add Toolbar -->
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar">
 
         <LinearLayout
             android:id="@+id/topContainer"
