--- a/android/app/src/main/res/layout/fragment_summitlist.xml
+++ b/android/app/src/main/res/layout/fragment_summitlist.xml
@@ -3,12 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- TODO: add Toolbar -->
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
 
     <LinearLayout
         android:id="@+id/listContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"
         android:orientation="vertical" />
 
     <com.melnykov.fab.FloatingActionButton
