--- a/android/app/src/main/res/layout/toolbar.xml
+++ b/android/app/src/main/res/layout/toolbar.xml
@@ -1,26 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/dntRed"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:elevation="4dp"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/projectlist"
-        android:name="no.dnt.sjekkut.ui.TripListFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutManager="LinearLayoutManager"
-        tools:context="no.dnt.sjekkut.ui.ProjectListFragment"
-        tools:listitem="@layout/projectitem" />
-</LinearLayout>
+    android:layout_height="?attr/actionBarSize"
+    android:background="@color/dntRed"
+    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+    app:elevation="4dp"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
