Add ProfileStatsFragment that contains dummy data
- Added ProjectListFragment, PlaceVisitAdapter
- Added layouts to support them
- enabled Up button on SummitListFragment
- renamed projectitem.xml to item_project.xml for
  symmetric naming

--- a/android/app/src/main/res/layout/fragment_projectlist.xml
+++ b/android/app/src/main/res/layout/fragment_projectlist.xml
@@ -17,5 +17,5 @@
         android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager"
         tools:context="no.dnt.sjekkut.ui.ProjectListFragment"
-        tools:listitem="@layout/projectitem" />
+        tools:listitem="@layout/item_project" />
 </LinearLayout>
