Added username, stats circles and logout button
- all contains dummy data
- looks ugly (not styled at all)
- added vector circle and enabled vectorDrawables.useSupportLibrary

--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -56,5 +56,18 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="StatsCircleCounter" parent="@style/TextAppearance.AppCompat">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 
+    <style name="StatsCircleLabel" parent="@style/TextAppearance.AppCompat">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="UserName" parent="@style/TextAppearance.AppCompat">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
